v1.0.0/modules/schema/pages/class/DiagramObject.adoc
= `DiagramObject`
:toclevels: 4


+++An object that defines one or more points in a given space. This object can be associated with anything that specializes IdentifiedObject. For single line diagrams such objects typically include such items as analog values, breakers, disconnectors, power transformers, and transmission lines.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:DiagramObject`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`DiagramObject`*
 *** xref::class/TextDiagramObject.adoc[`TextDiagramObject`]


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}





Diagram {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



VisibilityLayer {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObjectPoint {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObjectStyle {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



IdentifiedObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}





DiagramObject -> Diagram: Diagram


DiagramObject -> VisibilityLayer: VisibilityLayers


DiagramObject -> DiagramObjectPoint: DiagramObjectPoints


DiagramObject -> DiagramObjectStyle: DiagramObjectStyle


DiagramObject -> IdentifiedObject: IdentifiedObject


DiagramObject -> DiagramObject: DiagramObjects


DiagramObject -> InstanceSet: InstanceSet


DiagramObject -> Name: Names


DiagramObject -> ChangeSetMember: PropertiesCIMDataObject


DiagramObject -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<Diagram,`Diagram`>>
| 0..1
| xref::class/Diagram.adoc[`Diagram`]
| +++A diagram object is part of a diagram.+++

| <<DiagramObjectStyle,`DiagramObjectStyle`>>
| 0..1
| xref::class/DiagramObjectStyle.adoc[`DiagramObjectStyle`]
| +++A diagram object has a style associated that provides a reference for the style used in the originating system.+++

| <<IdentifiedObject,`IdentifiedObject`>>
| 0..1
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
| +++The domain object to which this diagram object is associated.+++

| <<drawingOrder,`drawingOrder`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++The drawing order of this element. The higher the number, the later the element is drawn in sequence. This is used to ensure that elements that overlap are rendered in the correct order.+++

| <<isPolygon,`isPolygon`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Defines whether or not the diagram objects points define the boundaries of a polygon or the routing of a polyline. If this value is true then a receiving application should consider the first and last points to be connected.+++

| <<offsetX,`offsetX`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++The offset in the X direction. This is used for defining the offset from centre for rendering an icon (the default is that a single point specifies the centre of the icon).

The offset is in per-unit with 0 indicating there is no offset from the horizontal centre of the icon.  -0.5 indicates it is offset by 50% to the left and 0.5 indicates an offset of 50% to the right.+++

| <<offsetY,`offsetY`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++The offset in the Y direction. This is used for defining the offset from centre for rendering an icon (the default is that a single point specifies the centre of the icon).

The offset is in per-unit with 0 indicating there is no offset from the vertical centre of the icon.  The offset direction is dependent on the orientation of the diagram, with -0.5 and 0.5 indicating an offset of +/- 50% on the vertical axis.+++

| <<rotation,`rotation`>>
| 0..1
| xref::class/AngleDegrees.adoc[`AngleDegrees`]
| +++Sets the angle of rotation of the diagram object.  Zero degrees is pointing to the top of the diagram.  Rotation is clockwise.  DiagramObject.rotation=0 has the following meaning: The connection point of an element which has one terminal is pointing to the top side of the diagram. The connection point "From side" of an element which has more than one terminal is pointing to the top side of the diagram.
DiagramObject.rotation=90 has the following meaning: The connection point of an element which has one terminal is pointing to the right hand side of the diagram. The connection point "From side" of an element which has more than one terminal is pointing to the right hand side of the diagram.+++

| <<DiagramObjectPoints,`DiagramObjectPoints`>>
| 0..*
| xref::class/DiagramObjectPoint.adoc[`DiagramObjectPoint`]
| +++A diagram object can have 0 or more points to reflect its layout position, routing (for polylines) or boundary (for polygons).+++

| <<VisibilityLayers,`VisibilityLayers`>>
| 0..*
| xref::class/VisibilityLayer.adoc[`VisibilityLayer`]
| +++A diagram object can be part of multiple visibility layers.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Diagram]
=== `Diagram`
+++A diagram object is part of a diagram.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DiagramObject.Diagram`
| Cardinality
| 0..1
| Type
| xref::class/Diagram.adoc[`Diagram`]


|===

//[discrete]
[#DiagramObjectPoints]
=== `DiagramObjectPoints`
+++A diagram object can have 0 or more points to reflect its layout position, routing (for polylines) or boundary (for polygons).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DiagramObject.DiagramObjectPoints`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObjectPoint.adoc[`DiagramObjectPoint`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjectStyle]
=== `DiagramObjectStyle`
+++A diagram object has a style associated that provides a reference for the style used in the originating system.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DiagramObject.DiagramObjectStyle`
| Cardinality
| 0..1
| Type
| xref::class/DiagramObjectStyle.adoc[`DiagramObjectStyle`]


|===

//[discrete]
[#drawingOrder]
=== `drawingOrder`
+++The drawing order of this element. The higher the number, the later the element is drawn in sequence. This is used to ensure that elements that overlap are rendered in the correct order.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DiagramObject.drawingOrder`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#IdentifiedObject]
=== `IdentifiedObject`
+++The domain object to which this diagram object is associated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DiagramObject.IdentifiedObject`
| Cardinality
| 0..1
| Type
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#isPolygon]
=== `isPolygon`
+++Defines whether or not the diagram objects points define the boundaries of a polygon or the routing of a polyline. If this value is true then a receiving application should consider the first and last points to be connected.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DiagramObject.isPolygon`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#offsetX]
=== `offsetX`
+++The offset in the X direction. This is used for defining the offset from centre for rendering an icon (the default is that a single point specifies the centre of the icon).

The offset is in per-unit with 0 indicating there is no offset from the horizontal centre of the icon.  -0.5 indicates it is offset by 50% to the left and 0.5 indicates an offset of 50% to the right.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DiagramObject.offsetX`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#offsetY]
=== `offsetY`
+++The offset in the Y direction. This is used for defining the offset from centre for rendering an icon (the default is that a single point specifies the centre of the icon).

The offset is in per-unit with 0 indicating there is no offset from the vertical centre of the icon.  The offset direction is dependent on the orientation of the diagram, with -0.5 and 0.5 indicating an offset of +/- 50% on the vertical axis.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DiagramObject.offsetY`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#rotation]
=== `rotation`
+++Sets the angle of rotation of the diagram object.  Zero degrees is pointing to the top of the diagram.  Rotation is clockwise.  DiagramObject.rotation=0 has the following meaning: The connection point of an element which has one terminal is pointing to the top side of the diagram. The connection point "From side" of an element which has more than one terminal is pointing to the top side of the diagram.
DiagramObject.rotation=90 has the following meaning: The connection point of an element which has one terminal is pointing to the right hand side of the diagram. The connection point "From side" of an element which has more than one terminal is pointing to the right hand side of the diagram.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DiagramObject.rotation`
| Cardinality
| 0..1
| Type
| xref::class/AngleDegrees.adoc[`AngleDegrees`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#VisibilityLayers]
=== `VisibilityLayers`
+++A diagram object can be part of multiple visibility layers.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DiagramObject.VisibilityLayers`
| Cardinality
| 0..*
| Type
| xref::class/VisibilityLayer.adoc[`VisibilityLayer`]


|===


