v1.1.0/modules/schema/pages/class/DiagramObject.adoc
= `DiagramObject`
:toclevels: 4


+++An object that defines one or more points in a given space. This object can be associated with anything that specializes IdentifiedObject. For single line diagrams such objects typically include such items as analog values, breakers, disconnectors, power transformers, and transmission lines.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:DiagramObject`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`DiagramObject`*
 *** xref::class/TextDiagramObject.adoc[`TextDiagramObject`]


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<Diagram,`Diagram`>>
//| [[slots_table.Diagram]]<<Diagram,`Diagram`>>
| 0..1 +
xref::class/Diagram.adoc[`Diagram`]
| +++A diagram object is part of a diagram.+++
| _n/a_

| <<DiagramObjectPoints,`DiagramObjectPoints`>>
//| [[slots_table.DiagramObjectPoints]]<<DiagramObjectPoints,`DiagramObjectPoints`>>
| 0..* +
xref::class/DiagramObjectPoint.adoc[`DiagramObjectPoint`]
| +++A diagram object can have 0 or more points to reflect its layout position, routing (for polylines) or boundary (for polygons).+++
| _n/a_

| <<DiagramObjectStyle,`DiagramObjectStyle`>>
//| [[slots_table.DiagramObjectStyle]]<<DiagramObjectStyle,`DiagramObjectStyle`>>
| 0..1 +
xref::class/DiagramObjectStyle.adoc[`DiagramObjectStyle`]
| +++A diagram object has a style associated that provides a reference for the style used in the originating system.+++
| _n/a_

| <<IdentifiedObject,`IdentifiedObject`>>
//| [[slots_table.IdentifiedObject]]<<IdentifiedObject,`IdentifiedObject`>>
| 0..1 +
xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
| +++The domain object to which this diagram object is associated.+++
| _n/a_

| <<VisibilityLayers,`VisibilityLayers`>>
//| [[slots_table.VisibilityLayers]]<<VisibilityLayers,`VisibilityLayers`>>
| 0..* +
xref::class/VisibilityLayer.adoc[`VisibilityLayer`]
| +++A diagram object can be part of multiple visibility layers.+++
| _n/a_

| <<drawingOrder,`drawingOrder`>>
//| [[slots_table.drawingOrder]]<<drawingOrder,`drawingOrder`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++The drawing order of this element. The higher the number, the later the element is drawn in sequence. This is used to ensure...+++
| _n/a_

| <<isPolygon,`isPolygon`>>
//| [[slots_table.isPolygon]]<<isPolygon,`isPolygon`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Defines whether or not the diagram objects points define the boundaries of a polygon or the routing of a polyline. If this...+++
| _n/a_

| <<offsetX,`offsetX`>>
//| [[slots_table.offsetX]]<<offsetX,`offsetX`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++The offset in the X direction. This is used for defining the offset from centre for rendering an icon (the default is that a...+++
| _n/a_

| <<offsetY,`offsetY`>>
//| [[slots_table.offsetY]]<<offsetY,`offsetY`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++The offset in the Y direction. This is used for defining the offset from centre for rendering an icon (the default is that a...+++
| _n/a_

| <<rotation,`rotation`>>
//| [[slots_table.rotation]]<<rotation,`rotation`>>
| 0..1 +
xref::class/AngleDegrees.adoc[`AngleDegrees`]
| +++Sets the angle of rotation of the diagram object.  Zero degrees is pointing to the top of the diagram.  Rotation is...+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#Diagram]
=== `Diagram`
+++A diagram object is part of a diagram.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DiagramObject.Diagram`
| Cardinality
| 0..1
| Type
| xref::class/Diagram.adoc[`Diagram`]


|===

////
[.text-left]
--
<<slots_table.Diagram,&#10548;>>
--
////


//[discrete]
[#DiagramObjectPoints]
=== `DiagramObjectPoints`
+++A diagram object can have 0 or more points to reflect its layout position, routing (for polylines) or boundary (for polygons).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DiagramObject.DiagramObjectPoints`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObjectPoint.adoc[`DiagramObjectPoint`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjectPoints,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#DiagramObjectStyle]
=== `DiagramObjectStyle`
+++A diagram object has a style associated that provides a reference for the style used in the originating system.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DiagramObject.DiagramObjectStyle`
| Cardinality
| 0..1
| Type
| xref::class/DiagramObjectStyle.adoc[`DiagramObjectStyle`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjectStyle,&#10548;>>
--
////


//[discrete]
[#drawingOrder]
=== `drawingOrder`
+++The drawing order of this element. The higher the number, the later the element is drawn in sequence. This is used to ensure that elements that overlap are rendered in the correct order.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DiagramObject.drawingOrder`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

////
[.text-left]
--
<<slots_table.drawingOrder,&#10548;>>
--
////


//[discrete]
[#IdentifiedObject]
=== `IdentifiedObject`
+++The domain object to which this diagram object is associated.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DiagramObject.IdentifiedObject`
| Cardinality
| 0..1
| Type
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.IdentifiedObject,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#isPolygon]
=== `isPolygon`
+++Defines whether or not the diagram objects points define the boundaries of a polygon or the routing of a polyline. If this value is true then a receiving application should consider the first and last points to be connected.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DiagramObject.isPolygon`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.isPolygon,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#offsetX]
=== `offsetX`
+++The offset in the X direction. This is used for defining the offset from centre for rendering an icon (the default is that a single point specifies the centre of the icon).

The offset is in per-unit with 0 indicating there is no offset from the horizontal centre of the icon.  -0.5 indicates it is offset by 50% to the left and 0.5 indicates an offset of 50% to the right.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DiagramObject.offsetX`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.offsetX,&#10548;>>
--
////


//[discrete]
[#offsetY]
=== `offsetY`
+++The offset in the Y direction. This is used for defining the offset from centre for rendering an icon (the default is that a single point specifies the centre of the icon).

The offset is in per-unit with 0 indicating there is no offset from the vertical centre of the icon.  The offset direction is dependent on the orientation of the diagram, with -0.5 and 0.5 indicating an offset of +/- 50% on the vertical axis.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DiagramObject.offsetY`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.offsetY,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#rotation]
=== `rotation`
+++Sets the angle of rotation of the diagram object.  Zero degrees is pointing to the top of the diagram.  Rotation is clockwise.  DiagramObject.rotation=0 has the following meaning: The connection point of an element which has one terminal is pointing to the top side of the diagram. The connection point "From side" of an element which has more than one terminal is pointing to the top side of the diagram.
DiagramObject.rotation=90 has the following meaning: The connection point of an element which has one terminal is pointing to the right hand side of the diagram. The connection point "From side" of an element which has more than one terminal is pointing to the right hand side of the diagram.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DiagramObject.rotation`
| Cardinality
| 0..1
| Type
| xref::class/AngleDegrees.adoc[`AngleDegrees`]


|===

////
[.text-left]
--
<<slots_table.rotation,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#VisibilityLayers]
=== `VisibilityLayers`
+++A diagram object can be part of multiple visibility layers.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DiagramObject.VisibilityLayers`
| Cardinality
| 0..*
| Type
| xref::class/VisibilityLayer.adoc[`VisibilityLayer`]


|===

////
[.text-left]
--
<<slots_table.VisibilityLayers,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/Diagram.adoc[`Diagram`] | xref::class/Diagram.adoc#DiagramElements[`DiagramElements`]



| xref::class/DiagramObjectPoint.adoc[`DiagramObjectPoint`] | xref::class/DiagramObjectPoint.adoc#DiagramObject[`DiagramObject`]



| xref::class/DiagramObjectStyle.adoc[`DiagramObjectStyle`] | xref::class/DiagramObjectStyle.adoc#StyledObjects[`StyledObjects`]



| xref::class/IdentifiedObject.adoc[`IdentifiedObject`] | xref::class/IdentifiedObject.adoc#DiagramObjects[`DiagramObjects`]



| xref::class/VisibilityLayer.adoc[`VisibilityLayer`] | xref::class/VisibilityLayer.adoc#VisibleObjects[`VisibleObjects`]


|===

